--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Alcatel Shop</string>
+    <string name="home">Home</string>
+    <string name="category">Category</string>
+    <string name="discovery">Discovery</string>
+    <string name="service">Service</string>
 </resources>
