--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="coupons">Coupons</string>
     <string name="other">Others</string>
     <string name="all_orders">All Orders</string>
+    <string name="service_site">Service site</string>
+    <string name="usual_question">Usual question</string>
+    <string name="contact_us">Contact us</string>
+    <string name="feedback">Feedback</string>
+    <string name="toolbar_hint_search">Search</string>
 </resources>
